@@ -180,16 +180,20 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>24</source>
+					<target>24</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 							<version>1.18.32</version>
 						</path>
+						<compilerArgs>
+							<arg>--enable-preview</arg>
+						</compilerArgs>
+
 					</annotationProcessorPaths>
-				</configuration>
+                </configuration>
 			</plugin>
 
 			<!-- Spring Boot Maven plugin for packaging and running the application -->
